--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 									<div class="progress w-100">
 										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-html" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
 									</div>
-									<span class="text-bloc-competences">Avanvé</span>
+									<span class="text-bloc-competences">Intermédiaire-avanvé</span>
 								</div>
 							</div>
 						</div>
@@ -166,7 +166,7 @@
 									<div class="progress w-100">
 										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-css" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
 									</div>
-									<span class="text-bloc-competences">Avancé</span>
+									<span class="text-bloc-competences">Intermédiaire-avancé</span>
 								</div>
 							</div>
 						</div>
@@ -182,7 +182,7 @@
 									<div class="progress w-100">
 										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-bootstrap" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
 									</div>
-									<span class="text-bloc-competences">Avancé</span>
+									<span class="text-bloc-competences">Intermédiaire-avancé</span>
 								</div>
 							</div>
 						</div>
@@ -196,9 +196,9 @@
 								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 									<h4 class="text-dark">Javascript</h4>
 									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-js" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-js" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
 									</div>
-									<span class="text-bloc-competences">Novice</span>
+									<span class="text-bloc-competences">Intermédiaire</span>
 								</div>
 							</div>
 						</div>
@@ -212,7 +212,7 @@
 								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 									<h4 class="text-dark">PHP</h4>
 									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-php" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-php" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
 									</div>
 									<span class="text-bloc-competences">Intermédiaire</span>
 								</div>
@@ -228,7 +228,7 @@
 								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 									<h4 class="text-dark">MySQL</h4>
 									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-mysql" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-mysql" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
 									</div>
 									<span class="text-bloc-competences">Intermédiaire</span>
 								</div>
@@ -260,9 +260,9 @@
 						    <div class="col-8 d-flex flex-column justify-content-center align-items-center">
 						      <h4 class="text-dark">Wordpress</h4>
 						      <div class="progress w-100">
-						        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wordpress" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"></div>
+						        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wordpress" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 45%"></div>
 						      </div>
-						      <span class="text-bloc-competences">Intermédiaire</span>
+						      <span class="text-bloc-competences">Intermédiaire-avancé</span>
 						    </div>
 						  </div>
 						</div>
@@ -301,9 +301,9 @@
 				    <div class="col-8 d-flex flex-column justify-content-center align-items-center">
 				      <h4 class="text-dark">Git & Linux</h4>
 				      <div class="progress w-100">
-				        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-git" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+				        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-git" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
 				      </div>
-				      <span class="text-bloc-competences">Avancé</span>
+				      <span class="text-bloc-competences">Intermédiaire</span>
 				    </div>
 				  </div>
 				</div>
@@ -317,9 +317,9 @@
 					<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 						<h4 class="text-dark">Illustrator</h4>
 						<div class="progress w-100">
-							<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-Illustrator" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+							<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-Illustrator" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
 						</div>
-						<span class="text-bloc-competences">Avancé</span>
+						<span class="text-bloc-competences">Intermédiaire</span>
 					</div>
 				</div>
 			</div>
@@ -333,7 +333,7 @@
 				<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 					<h4 class="text-dark">Photoshop</h4>
 					<div class="progress w-100">
-						<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-Photoshop" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+						<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-Photoshop" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
 					</div>
 					<span class="text-bloc-competences">Novice</span>
 				</div>
@@ -349,9 +349,9 @@
 			<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 				<h4 class="text-dark">InDesign</h4>
 				<div class="progress w-100">
-					<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-InDesign" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%"></div>
+					<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-InDesign" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 35%"></div>
 				</div>
-				<span class="text-bloc-competences">Intermédiaire</span>
+				<span class="text-bloc-competences">Novice</span>
 			</div>
 		</div>
 	</div>
